[package]
name = "rocky-insight"
version = "0.1.0"
authors = ["Sondre Halvorsen <sondre@sonhal.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["ssl-vendored", "libz"] }
log = "0.4.8"
env_logger = "0.9.0"
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
serde_json = "1.0"

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs", branch = "dev" }